--- a/src/styles.css
+++ b/src/styles.css
@@ -92,7 +92,7 @@ button {
     width: 900px;
     height: 300px;
     background-image: url('list-bg.png');
-    justify-self: center;
-    margin-bottom: 20px;
+    text-align: left;
+    line-height: 45px;
 
 }
